--- a/kalvium portfolio/Squard 64.css
+++ b/kalvium portfolio/Squard 64.css
@@ -24,7 +24,7 @@ body {
   padding: 10px;
 } */
 body::-webkit-scrollbar {
-  width: 2px;
+  width: 5px;
 }
 
 body::-webkit-scrollbar-track{
