--- a/kalvium portfolio/aboutus.css
+++ b/kalvium portfolio/aboutus.css
@@ -16,7 +16,7 @@ body {
     
   }
   body::-webkit-scrollbar {
-    width: 2px;
+    width: 5px;
 }
 
 body::-webkit-scrollbar-track{
