--- a/kalvium portfolio/mentors.css
+++ b/kalvium portfolio/mentors.css
@@ -15,7 +15,7 @@ body {
     
 }
 body::-webkit-scrollbar {
-    width: 2px;
+    width: 5px;
 }
 
 body::-webkit-scrollbar-track{
